# Emulator

./: .gitignore  CMakeLists.txt  Kconfig  prj.conf  west.yml  后续实现.md
.claude/: settings.local.json
app/: CMakeLists.txt
app/include/app/: bms_response_log.h  can_protocol.h  dac_safety.h  fault_command.h  fault_console.h  tcp_json_server.h  voltage_sim.h  waveform_engine.h  waveform_gen.h
app/src/: main.c
app/src/bms_response_log/: bms_response_log.c
app/src/can_protocol/: can_protocol.c
app/src/dac_safety/: dac_safety.c
app/src/fault_command/: fault_command.c
app/src/fault_console/: fault_console.c
app/src/tcp_json_server/: tcp_json_server.c
app/src/voltage_sim/: voltage_sim.c
app/src/waveform_engine/: waveform_engine.c
app/src/waveform_gen/: waveform_gen.c
boards/arm/bms_emu_altmcu/: README.md
boards/arm/bms_emu_h743/: Kconfig.board  Kconfig.defconfig  bms_emu_h743.dts  bms_emu_h743.yaml  bms_emu_h743_defconfig  board.cmake
doc/: 技术方案.md  架构说明.md
drivers/: CMakeLists.txt  Kconfig
drivers/can/: CMakeLists.txt  Kconfig  bsp_can.c
drivers/dac81416/: CMakeLists.txt  Kconfig  bsp_dac81416.c  dac81416.c
drivers/eth/: CMakeLists.txt  Kconfig  bsp_eth.c
drivers/sram/: CMakeLists.txt  Kconfig  bsp_sram.c
dts/bindings/dac/: bmsemu,dac81416-ctrl.yaml  bmsemu,dac81416.yaml
include/drivers/: bsp_can.h  bsp_dac81416.h  bsp_eth.h  bsp_sram.h  dac81416.h
overlays/: README.md
tests/voltage_sim/: CMakeLists.txt  prj.conf  testcase.yaml
tests/voltage_sim/src/: dac_stub.c  dac_stub.h  main.c
